fix: download file implemented

--- a/src/components/HomePage/index.module.css
+++ b/src/components/HomePage/index.module.css
@@ -16,7 +16,17 @@
   text-align: left;
   padding: 8px;
 }
+.table thead {
+  background: #000;
+  color: white;
+}
+.table thead tr th{
+  padding: 10px;
+}
+.table tbody tr:nth-child(odd) {
+  background-color: #63fff2;
+}
 
-.table tr:nth-child(even) {
+.table tbody tr:nth-child(even) {
   background-color: #d6eeee;
 }
